--- a/index.ipynb
+++ b/index.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,13 +214,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['France', 'Australia']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the name of the country for each team\n",
-    "countries = None\n",
-    "# code goes here"
+    "countries = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    countries.append(team[\"country\"])\n",
+    "countries"
    ]
   },
   {
@@ -234,14 +248,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['blue', 'white', 'red', 'green', 'gold']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# iterate over the soccer_match list to create a new list with the colors for each team\n",
     "# this should be only one list containing strings for each of the country's colors\n",
-    "colors = None\n",
-    "# code goes here"
+    "colors = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    for color in team['colors']:\n",
+    "        colors.append(color)\n",
+    "\n",
+    "colors"
    ]
   },
   {
@@ -255,12 +285,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'France': ['Hugo LLORIS',\n",
+       "  'Benjamin PAVARD',\n",
+       "  'Raphael VARANE',\n",
+       "  'Samuel UMTITI',\n",
+       "  'Paul POGBA',\n",
+       "  'Antoine GRIEZMANN',\n",
+       "  'Kylian MBAPPE',\n",
+       "  'Ousmane DEMBELE',\n",
+       "  'Corentin TOLISSO',\n",
+       "  'Ngolo KANTE',\n",
+       "  'Lucas HERNANDEZ'],\n",
+       " 'Australia': ['Mathew RYAN',\n",
+       "  'Mark MILLIGAN',\n",
+       "  'Mathew LECKIE',\n",
+       "  'Robbie KRUSE',\n",
+       "  'Andrew NABBOUT',\n",
+       "  'Aaron MOOY',\n",
+       "  'Mile JEDINAK',\n",
+       "  'Aziz BEHICH',\n",
+       "  'Joshua RISDON',\n",
+       "  'Trent SAINSBURY',\n",
+       "  'Tom ROGIC']}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "players = None\n",
-    "# code goes here"
+    "players = {}\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    ourteam =[]\n",
+    "    for player in team[\"players\"]:\n",
+    "        ourteam.append(player['name'])\n",
+    "    players[team[\"country\"]] = ourteam\n",
+    "\n",
+    "players"
    ]
   },
   {
@@ -275,12 +344,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Mile JEDINAK',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 15,\n",
+       "  'position': 'Midfield'}]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "captains = None\n",
-    "# code goes here"
+    "captains = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    for player in team[\"players\"]:\n",
+    "        if player[\"captain\"]:\n",
+    "            captains.append(player) \n",
+    "        else:\n",
+    "            continue\n",
+    "captains"
    ]
   },
   {
@@ -294,12 +388,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Hugo LLORIS',\n",
+       "  'captain': True,\n",
+       "  'shirt_number': 1,\n",
+       "  'position': 'Goalie'},\n",
+       " {'name': 'Benjamin PAVARD',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 2,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Raphael VARANE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 4,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Samuel UMTITI',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 5,\n",
+       "  'position': 'Defender'},\n",
+       " {'name': 'Paul POGBA',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 6,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Antoine GRIEZMANN',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Kylian MBAPPE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Ousmane DEMBELE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Corentin TOLISSO',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 12,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Ngolo KANTE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 13,\n",
+       "  'position': 'Midfield'},\n",
+       " {'name': 'Lucas HERNANDEZ',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 21,\n",
+       "  'position': 'Defender'}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "home_team_players = None\n",
-    "# code goes here"
+    "home_team_players = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    if team[\"home_team\"]:\n",
+    "        for player in team[\"players\"]:\n",
+    "            home_team_players.append(player)\n",
+    "            \n",
+    "home_team_players    "
    ]
   },
   {
@@ -313,12 +467,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'name': 'Mathew LECKIE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 7,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Robbie KRUSE',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 10,\n",
+       "  'position': 'Forward'},\n",
+       " {'name': 'Andrew NABBOUT',\n",
+       "  'captain': False,\n",
+       "  'shirt_number': 11,\n",
+       "  'position': 'Forward'}]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "away_team_forwards = None\n",
-    "# code goes here"
+    "away_team_forwards = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    if not team[\"home_team\"]:\n",
+    "        for player in team[\"players\"]:\n",
+    "            if player[\"position\"] == \"Forward\":\n",
+    "                away_team_forwards.append(player)\n",
+    "                \n",
+    "away_team_forwards"
    ]
   },
   {
@@ -333,12 +516,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Tom ROGIC',\n",
+       " 'captain': False,\n",
+       " 'shirt_number': 23,\n",
+       " 'position': 'Midfield'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "player_with_highest_num = None\n",
-    "# code goes here"
+    "player_with_highest_num = []\n",
+    "highest=0\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    for player in team[\"players\"]:\n",
+    "        if player[\"shirt_number\"] >= highest:\n",
+    "            player_with_highest_num.append(player)\n",
+    "            highest = player[\"shirt_number\"]\n",
+    "player_with_highest_num = player_with_highest_num[-1]\n",
+    "player_with_highest_num"
    ]
   },
   {
@@ -352,12 +557,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hugo Lloris',\n",
+       " 'Benjamin Pavard',\n",
+       " 'Raphael Varane',\n",
+       " 'Samuel Umtiti',\n",
+       " 'Paul Pogba',\n",
+       " 'Antoine Griezmann',\n",
+       " 'Kylian Mbappe',\n",
+       " 'Ousmane Dembele',\n",
+       " 'Corentin Tolisso',\n",
+       " 'Ngolo Kante',\n",
+       " 'Lucas Hernandez',\n",
+       " 'Mathew Ryan',\n",
+       " 'Mark Milligan',\n",
+       " 'Mathew Leckie',\n",
+       " 'Robbie Kruse',\n",
+       " 'Andrew Nabbout',\n",
+       " 'Aaron Mooy',\n",
+       " 'Mile Jedinak',\n",
+       " 'Aziz Behich',\n",
+       " 'Joshua Risdon',\n",
+       " 'Trent Sainsbury',\n",
+       " 'Tom Rogic']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "player_names = None\n",
-    "# code goes here"
+    "player_names = []\n",
+    "# code goes here\n",
+    "for team in soccer_match:\n",
+    "    for player in team[\"players\"]:\n",
+    "        player_names.append(player[\"name\"].title())\n",
+    "        \n",
+    "player_names"
    ]
   },
   {
@@ -377,9 +619,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
